--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+*{
+    scroll-behavior: smooth;
+}
+
 .the-card {
     font-size: 22px;
     color: #fff;
@@ -10,4 +14,19 @@
 }
 .icons:hover {
     transform: scale(1.2);
+}
+
+
+.main-card{
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.561);
+    display: none;
+    transition: 1s;
+}
+.card:hover .main-card{
+    display: block;
+    transition: 1s;
+}
+.bra {
+    background-color: rgb(5, 75, 87);
 }
